# minimal-gradio-rerun

./: README.md  app.py  pyproject.toml
src/minimal_gradio_rerun/: app.py
