[project]
authors = [{ name = "pablovela5620", email = "pablovela5620@gmail.com" }]
name = "minimal-gradio-rerun"
requires-python = ">= 3.11"
version = "0.1.0"
dependencies = [
    "gradio>=5.23.3,<6",
    "gradio_rerun @ https://huggingface.co/datasets/pablovela5620/gradio-rr-0.23/resolve/main/gradio_rerun-0.0.8-py3-none-any.whl",
    "rerun-sdk @ https://github.com/rerun-io/rerun/releases/download/prerelease/rerun_sdk-0.23.0a1+dev-cp38-abi3-manylinux_2_31_x86_64.whl", "beartype>=0.20.2,<0.21",
]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
minimal_gradio_rerun = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
python = "==3.11"
